--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
    <h1> Mozilla is Cool </h1>
-    <img src="/Users/anthony/Desktop/WEB/Images/firefox-icon.png" alt= "Mon Image de Test">
+    <img src="/Images/firefox-icon.png" alt= "Mon Image de Test">
   <p>Mozilla est une communauté mondiale composée de </p>
     
 <ul> 
