--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
    <h1> Mozilla is Cool </h1>
-    <img src="https://github.com/Myridin/Myridin.github.io/blob/master/Images/firefox-icon.png?raw=true" alt= "Mon Image de Test">
+    <img src="https://github.com/Myridin/Myridin.github.io/blob/master/Images/firefox-icon.png" alt= "Mon Image de Test">
   <p>Mozilla est une communauté mondiale composée de </p>
     
 <ul> 
