--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <button> Changer d'utilisateur </button>
 
-  <script src="scripts/main.js"></script>
+  <script src="https://github.com/Myridin/Myridin.github.io/blob/master/scripts/main.js"></script>
 
   </body>
 </html> 
